<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bkgd_color"
        tools:context="com.uca.recycluster.ui.appcontent.view.fragments.MoreInfoFragment">

        <TextView
            android:id="@+id/textView_moreInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xxxlarge_gap"
            android:textColor="@color/white"
            android:text="@string/more_info_text"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/top_margin"
            android:background="@drawable/rounded_rectangle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_moreInfo"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/textView_H1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_gap"
                android:layout_marginHorizontal="@dimen/large_gap"
                android:layout_marginBottom="@dimen/small_gap"
                android:text="@string/Headline1_MoreInfo"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

            <TextView
                android:id="@+id/textView_P1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large_gap"
                android:layout_marginEnd="@dimen/xlarge_gap"
                android:layout_marginBottom="@dimen/small_gap"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:text="@string/Recycluster_Work" />

            <TextView
                android:id="@+id/textView_H2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_gap"
                android:layout_marginHorizontal="@dimen/large_gap"
                android:layout_marginBottom="@dimen/small_gap"
                android:text="@string/Headline2_MoreInfo"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

            <TextView
                android:id="@+id/textView_P2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large_gap"
                android:layout_marginEnd="@dimen/xlarge_gap"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:text="@string/Recycluster_About" />

            <TextView
                android:id="@+id/textView_H3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_gap"
                android:layout_marginHorizontal="@dimen/large_gap"
                android:layout_marginBottom="@dimen/small_gap"
                android:text="@string/Headline3_MoreInfo"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

            <TableLayout
                android:layout_marginTop="@dimen/small_gap"
                android:layout_marginHorizontal="@dimen/default_gap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
                <TableRow>

                <ImageView
                    android:layout_width="@dimen/emblem_size"
                    android:layout_height="@dimen/emblem_size"
                    android:src="@drawable/emblem_1"/>

                <ImageView
                    android:layout_width="@dimen/emblem_size"
                    android:layout_height="@dimen/emblem_size"
                    android:src="@drawable/emblem_2"/>

                <ImageView
                    android:layout_width="@dimen/emblem_size"
                    android:layout_height="@dimen/emblem_size"
                    android:src="@drawable/emblem_3"/>

                <ImageView
                    android:layout_width="@dimen/emblem_size"
                    android:layout_height="@dimen/emblem_size"
                    android:src="@drawable/emblem_4"/>

                <ImageView
                    android:layout_width="@dimen/emblem_size"
                    android:layout_height="@dimen/emblem_size"
                    android:src="@drawable/emblem_5"/>

                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/textView_Emblem1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        android:textAlignment="center"
                        android:text="@string/Emblem1_Points"/>
                    <TextView
                        android:id="@+id/textView_Emblem2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        android:textAlignment="center"
                        android:text="@string/Emblem2_Points"/>
                    <TextView
                        android:id="@+id/textView_Emblem3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        android:textAlignment="center"
                        android:text="@string/Emblem3_Points"/>
                    <TextView
                        android:id="@+id/textView_Emblem4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        android:textAlignment="center"
                        android:text="@string/Emblem4_Points"/>
                    <TextView
                        android:id="@+id/textView_Emblem5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        android:textAlignment="center"
                        android:text="@string/Emblem5_Points"/>
                </TableRow>
            </TableLayout>

            <Button
                android:id="@+id/containedButton_LogIn"
                android:textColor="@color/white"
                android:backgroundTint="@color/cyan_300"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_gap"
                android:text="@string/moreInfo_Button"
                android:layout_marginTop="@dimen/large_gap"
                android:layout_gravity="center"
                />



        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>