<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.uca.recycluster.ui.loginSignUp.viewmodel.LoginViewModel" />
    </data>

    <FrameLayout
        android:id="@+id/restore_parent"
        android:background="@color/bkgd_color"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.loginSignUp.view.fragments.ForgotPasswordFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView_appName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recycluster"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.1" />

            <TextView
                android:id="@+id/textView_recoverPassword"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_gap"
                android:text="@string/recoverPassword"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/textView_appName"
                app:layout_constraintStart_toStartOf="@+id/textView_appName"
                app:layout_constraintTop_toBottomOf="@+id/textView_appName" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField_password"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_gap"
                android:layout_marginTop="@dimen/top_margin"
                android:hint="@string/email"
                android:textColorHint="@color/white"
                android:theme="@style/LoginTextInputLayoutStyle"
                app:layout_constraintEnd_toEndOf="@+id/textView_appName"
                app:layout_constraintStart_toStartOf="@+id/textView_appName"
                app:layout_constraintTop_toBottomOf="@+id/textView_recoverPassword"
                app:startIconDrawable="@drawable/ic_baseline_mail">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:text="@={viewModel.userEmail}"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/containedButton_LogIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_margin"
                android:layout_marginBottom="@dimen/default_gap"
                android:backgroundTint="@color/cyan_300"
                android:onClick="@{() -> viewModel.onForgotPassword()}"
                android:text="@string/recoverPasswordButton"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/outlinedTextField_password"
                app:layout_constraintStart_toStartOf="@+id/outlinedTextField_password"
                app:layout_constraintTop_toBottomOf="@+id/outlinedTextField_password"
                app:layout_constraintVertical_bias="0.75" />

            <Button
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="BACK"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>
